--- a/entornoCliente/retoJuegoCartasAlvaroRueda/styles.css
+++ b/entornoCliente/retoJuegoCartasAlvaroRueda/styles.css
@@ -1,13 +1,18 @@
+body{
+    background-image: url("img/fondoMadera1.jpg");
+}
 .tablero{
     width: 1400px;
     height: 600px;
 }
 
 .jugador{
-    border: thin groove brown;
+    border: 5px groove #281916;
+    border-radius: 20px  ;
     width: 500px;
     height: 550px;
     float: left;
+    background-image: url("img/tapizVerde1.jpg");
 }
 
 .elegirCarta{
@@ -38,10 +43,12 @@
 }
 
 .banca{
-    border: thin groove brown;
+    border: 5px groove #281916;    border-radius: 20px;
     width: 500px;
     height: 550px;
     float: left;
+    background-image: url("img/tapizVerde1.jpg");
+
 }
 
 .elegirCartaBanca{
@@ -72,22 +79,27 @@
 }
 
 .interaccion{
-    border: thin groove brown;
+    border: 5px groove #281916;
+    border-radius: 20px;
     width: 200px;
     height: 260px;
     float: left;
+    background-image: url("img/tapizVerde1.jpg");
+
 }
 
 .puntuajeJugador{
    display: inline-flex;
-    border: brown thin groove;
+    
+    border-radius: 20px;
     width: 200px;
     height: 100px;
 }
 
 .puntuajeBanca{
     display: inline-flex;
-    border: brown thin groove;
+    border: #281916 2px groove;
+    
     width: 200px;
     height: 97px;
 }
@@ -98,29 +110,35 @@
     width: 20px;
     height: 20px;
     border-width: 0px;
+    background-image: url("img/tapizVerde1.jpg");
+
 }
 .puntosBanca{
     margin-top: 12px;
     width: 20px;
     height: 20px;
     border-width: 0px;
-
+    background-image: url("img/tapizVerde1.jpg");
 }
 
 .botones{
     width: 200px;
     height: 59px;
-    border: brown thin groove;
+    border-radius: 20px;
 }
 
 .plantar{
     margin-top: 10px;
     margin-left: 20px;
+    
 }
 .veredicto{
     width: 120px;
     margin-left: 33px;
+    color: ivory;
+    font-size: 17px;
     margin-top: 2px;
     border-width: 0px;
+    background-image: url("img/tapizVerde1.jpg");
 }
 
